force-app/main/default/objects/ProductItem/fields/SVMXA360__DaysSinceLastConsumedDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DaysSinceLastConsumedDate__c</fullName>
    <description>The date on which the item was last consumed on a work order.</description>
    <formula>TODAY() - SVMXA360__LastConsumedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Consumed Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>