force-app/main/default/objects/ProductItem/fields/SVMXA360__LastConsumedDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LastConsumedDate__c</fullName>
    <description>The date on which the item was last consumed on a work order.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Consumed Date</label>
    <type>Date</type>
</CustomField>