force-app/main/default/objects/ProductItem/fields/SVMXA360__MaximumQuantity__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaximumQuantity__c</fullName>
    <description>Maximum stock required at this location.</description>
    <label>Maximum Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>