force-app/main/default/objects/ProductItem/fields/SVMXA360__MinimumQuantity__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MinimumQuantity__c</fullName>
    <description>Minimum stock required at this location.</description>
    <label>Minimum Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>