force-app/main/default/objects/ProductItem/fields/SVMXA360__ReorderPoint__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReorderPoint__c</fullName>
    <description>The quantity at which the item is reordered. The threshold to ensure the quantity does not fall below the reorder point.</description>
    <label>Reorder Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>