force-app/main/default/objects/ProductItem/fields/SVMXA360__ReorderQuantity__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReorderQuantity__c</fullName>
    <description>The number of units that are recommended to be reordered.</description>
    <label>Reorder Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>