force-app/main/default/objects/ProductItem/fields/SVMXA360__ReorderRequired__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReorderRequired__c</fullName>
    <description>Indicates if a reorder is required or not</description>
    <formula>IF(AND(NOT(ISBLANK(SVMXA360__ReorderPoint__c)),QuantityOnHand &lt;= SVMXA360__ReorderPoint__c),true, false)</formula>
    <inlineHelpText>Indicates if a reorder is required or not</inlineHelpText>
    <label>Reorder Required</label>
    <type>Checkbox</type>
</CustomField>